unpackaged/main/default/objects/Location/fields/Sdo_Scom_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Sdo_Scom_Facilities__c</fullName>
    <label>Facilities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>