unpackaged/main/default/objects/Location/fields/Sdo_Scom_Preferred_Store__c.field-meta.xml
<CustomField>
    <fullName>Sdo_Scom_Preferred_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Store</label>
    <type>Checkbox</type>
</CustomField>