unpackaged/main/default/objects/Location/fields/Sdo_Scom_Services__c.field-meta.xml
<CustomField>
    <fullName>Sdo_Scom_Services__c</fullName>
    <label>Services</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>