unpackaged/main/default/objects/Location/fields/Sdo_Scom_Store_Timings__c.field-meta.xml
<CustomField>
    <fullName>Sdo_Scom_Store_Timings__c</fullName>
    <label>Store Timings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>